advantages display, need to remove some and make it look better ofc next step would be news part

--- a/CarRepairShop/src/views/layout.ejs
+++ b/CarRepairShop/src/views/layout.ejs
@@ -7,6 +7,7 @@
     
     <link rel="icon" type="image/png" href="/images/Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" nonce="<%= nonce %>">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" nonce="<%= nonce %>">
         <!-- Local bootstrap.js-->
         <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
         <!-- Global bootstrap js-->
