--- a/CarRepairShop/src/views/pages/home.ejs
+++ b/CarRepairShop/src/views/pages/home.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/app.css">
     <link rel="manifest" href="/js/manifest.json">
-
+    
 
 </head>
 
@@ -23,7 +23,7 @@
         </h4>
     </div>
 
-    <div tabindex="0" id="Services" class=" mt-4 text-white">
+    <div tabindex="0" id="Services" class=" mt-2 text-white">
         <div class="bg-light rounded ">
             <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators "> 
@@ -119,12 +119,62 @@
         </div>
     </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
+    <div class="container text-white ">
+        <div tabindex=0 class="bg-gray  rounded m-2">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="text-center">
+                        Advantages of Choosing Us<br>
+                    </h2>
+                </div>
+            </div>
+            <div class="row text-white">
+                <div class="col-md-6 text-left">
+                    <ul class="list-unstyled">
+                        <li class="mb-3">
+                            <i class="fas fa-tools fa-2x text-primary"></i>
+                            <span class="ml-2"><b>Expert Technicians:</b> Our team consists of highly skilled and certified technicians.</span>
+                        </li>
+                        <li class="mb-3">
+                            <i class="fas fa-clock fa-2x text-primary"></i>
+                            <span class="ml-2"><b>Quick Service:</b> We ensure timely service to get you back on the road as soon as possible.</span>
+                        </li>
+                        <li class="mb-3">
+                            <i class="fas fa-dollar-sign fa-2x text-primary"></i>
+                            <span class="ml-2"><b>Affordable Prices:</b> Competitive pricing without compromising on quality.</span>
+                        </li>
+                        <li class="mb-3">
+                            <i class="fas fa-shield-alt fa-2x text-primary"></i>
+                            <span class="ml-2"><b>Reliable Repairs:</b> We use high-quality parts and provide a warranty on all repairs.</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-6 text-left mb-1">
+                    <ul class="list-unstyled">
+                        <li class="mb-3">
+                            <i class="fas fa-car fa-2x text-primary"></i>
+                            <span class="ml-2"><b>Comprehensive Services:</b> From routine maintenance to complex repairs, we do it all.</span>
+                        </li>
+                        <li class="mb-3">
+                            <i class="fas fa-thumbs-up fa-2x text-primary"></i>
+                            <span class="ml-2"><b>Customer Satisfaction:</b> Our top priority is ensuring our customers are happy with our service.</span>
+                        </li>
+                        <li class="mb-3">
+                            <i class="fas fa-map-marker-alt fa-2x text-primary"></i>
+                            <span class="ml-2"><b>Convenient Location:</b> Easily accessible location with ample parking space.</span>
+                        </li>
+                        <li class="mb-3">
+                            <i class="fas fa-calendar-check fa-2x text-primary"></i>
+                            <span class="ml-2"><b>Easy Appointments:</b> Book your service appointments online with ease.</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
     <div class="container text-white mt-5 ">
         <div tabindex=0 class="bg-light p-4 rounded minW250px">
             <div class="row">
@@ -169,7 +219,6 @@
                     </ul>
                 </div>
             </div>
-
         </div>
 
         <!-- Additional Content Section -->
