--- a/CarRepairShop/src/views/pages/Login.ejs
+++ b/CarRepairShop/src/views/pages/Login.ejs
@@ -42,7 +42,8 @@
                         </div>
                         <input type="password" class="form-control" id="password" placeholder="<%= __('Enter a password') %>" maxlength="45">
                     </div>
-                    <button type="submit" class="btn btn-secondary btn-block"><%= __('Login button') %></button>
+                    <a href="/SignUp">Create an account instead?</a>
+                    <button type="submit" class="btn btn-secondary btn-block mt-1"><%= __('Login button') %></button>
                     <br>
                 </form>
             </div>
