--- a/CarRepairShop/src/views/layout.ejs
+++ b/CarRepairShop/src/views/layout.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" nonce="<%= nonce %>">
         <!-- Local bootstrap.js-->
         <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
+        <script src="/js/app.js" nonce="<%= nonce %>"></script>
         <!-- Global bootstrap js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"
             nonce="<%= nonce %>"></script>
